k8s/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  type: ClusterIP
  selector:
    component: model-service
  ports:
    - port: 8080
      name: http
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: model-service
  template:
    metadata:
      labels:
        component: model-service
    spec:
      containers:
        - name: model-service
          image: ghcr.io/remla23-team17/model-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
